--- a/bc_proj/clinic/templates/clinic/employees.html
+++ b/bc_proj/clinic/templates/clinic/employees.html
@@ -102,4 +102,6 @@
     <button id="rewardButton">Премировать</button>
     <div id="rewardOutput"></div>
 </div>
+
+<script src="{% static 'clinic/js/table.js' %}"></script>
 {% endblock %}
