Добавил JS пагинации и начало окна деталей

--- a/bc_proj/clinic/templates/clinic/employees.html
+++ b/bc_proj/clinic/templates/clinic/employees.html
@@ -89,6 +89,7 @@
 
     <!-- Employee Details Display -->
     <div id="employeeDetails" class="details-container" style="display: none;">
+        <button id="closeDetailsButton" class="close-button">×</button>
         <h3>Детали сотрудника</h3>
         <p>Фамилия: <span id="detailSurname"></span></p>
         <p>Имя: <span id="detailName"></span></p>
