--- a/bc_proj/clinic/static/clinic/css/employees.css
+++ b/bc_proj/clinic/static/clinic/css/employees.css
@@ -78,6 +78,17 @@
     white-space: nowrap;
 }
 
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: #333;
+}
+
 /* Стили для стрелок сортировки */
 .sort-asc::after {
     content: '▲'; /* Стрелка вверх для сортировки по возрастанию */
