--- a/bc_proj/clinic/static/clinic/css/employees.css
+++ b/bc_proj/clinic/static/clinic/css/employees.css
@@ -201,7 +201,6 @@
 .form-container input[type="email"],
 .form-container input[type="url"],
 .form-container input[type="file"] {
-    width: 100%;
     padding: 8px;
     border: 1px solid #CCC;
     border-radius: 5px;
@@ -213,6 +212,18 @@
 .form-container input[type="url"].invalid {
     border: 1px solid #E74C3C;
     background-color: #FDEDEC;
+}
+
+.form-container input {
+    width: calc(100% - 20px);
+}
+
+.form-container select {
+    padding: 8px;
+    border: 1px solid #CCC;
+    border-radius: 5px;
+    margin-top: 5px;
+    width: 100%;
 }
 
 /* Кнопка добавления в таблицу */
@@ -275,6 +286,15 @@
     margin-top: 10px;
     font-size: 14px;
     color: #333;
+}
+
+.invalid-input {
+    border: 1px solid red;
+    background-color: #ffdddd;
+}
+.error {
+    color: red;
+    font-size: 0.9em;
 }
 
 /* Адаптивные стили */
