Сделал третий пункт без прелоадера. Не проверял конфликты ревард js и остальных js

--- a/bc_proj/clinic/templates/clinic/employees.html
+++ b/bc_proj/clinic/templates/clinic/employees.html
@@ -140,6 +140,7 @@
     </div>
 </div>
 
+<script src="{% static 'clinic/js/reward.js' %}"></script>
 <script src="{% static 'clinic/js/form.js' %}"></script>
 <script src="{% static 'clinic/js/pagination_details_sorting.js' %}"></script>
 {% endblock %}
