--- a/bc_proj/main/static/main/css/article_detail.css
+++ b/bc_proj/main/static/main/css/article_detail.css
@@ -61,3 +61,26 @@
 .article-detail a:hover {
     background-color: #bb8f02;
 }
+
+.settings-container {
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    padding: 20px;
+    background-color: #FFFFFF;
+    font-family: Arial, sans-serif;
+}
+
+.settings-panel {
+    margin-top: 10px;
+    padding: 10px;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+}
+
+.settings-panel label {
+    display: block;
+    margin-bottom: 10px;
+    color: #333;
+}
+
