Еще не исправил седьмой пункт

--- a/bc_proj/clinic/templates/clinic/registration.html
+++ b/bc_proj/clinic/templates/clinic/registration.html
@@ -51,4 +51,6 @@
         <button type="submit" class="btn submit-btn">Зарегистрироваться</button>
         <span class="error-message">{{ error }}</span>
     </form>
+
+    <script src="{% static 'clinic/js/adulthood.js' %}"></script>
 {% endblock %}
