--- a/bc_proj/clinic/templates/clinic/services.html
+++ b/bc_proj/clinic/templates/clinic/services.html
@@ -93,5 +93,6 @@
     </div>
 
     <script src="{% static 'clinic/js/service_pagination.js' %}"></script>
+    <script src="{% static 'clinic/js/service_card_hover_effect.js' %}"></script>
 {% endblock %}
 
