--- a/bc_proj/main/templates/main/layout.html
+++ b/bc_proj/main/templates/main/layout.html
@@ -130,6 +130,7 @@
         window.onload = hidePreloader;
     </script>
     <script src="{% static 'main/js/countdown.js' %}"></script>
+    <script src="{% static 'main/js/age_issue.js' %}"></script>
 </body>
 
 </html>
