--- a/bc_proj/main/templates/main/about.html
+++ b/bc_proj/main/templates/main/about.html
@@ -14,6 +14,36 @@
 {% endblock %}
 
 {% block content %}
+<div id="molecules_container">
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+    <div class="s">
+        <div class="a"></div>
+        <div class="b"></div>
+    </div>
+</div>
     <div id="about-page">
         <h1 id="company-name">Косметологический центр "Галатея"</h1>
 
@@ -74,4 +104,6 @@
             {% endif %}
         {% endif %}
     </div>
+
+<script src="{% static 'main/js/about.js' %}"></script>
 {% endblock %}
