Лабораторная работа 3 (сохранение графика)

--- a/bc_proj/main/templates/main/ninth_task.html
+++ b/bc_proj/main/templates/main/ninth_task.html
@@ -13,6 +13,10 @@
 <div class="chart-container">
   <canvas id="arcsinChart"></canvas>
 </div>
+
+<!-- Fixed Save Button -->
+<button id="saveChartButton">Сохранить график</button>
+
 <script src="{% static 'main/js/ninth_task.js' %}"></script>
 </body>
 </html>
